<resources>
    <string name="app_name">StoryApp</string>
    <string name="name">Name</string>
    <string name="profile">Profile</string>
    <string name="no_users_found">User not found</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="setting">Setting</string>
    <string name="signup">Sign Up</string>
    <string name="login">Sign In</string>
    <string name="title_signup_page">Complete your data below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Please login first </string>
    <string name="title_login_page">Welcome to the StoryApp App</string>
    <string name="logout">Logout</string>
    <string name="dont_have_account">Don\'t have account ?</string>
    <string name="action_register">Register here</string>
    <string name="have_account">Already have account ?</string>
    <string name="action_login">Login here</string>
    <string name="empty_email">Please insert your email</string>
    <string name="invalid_email">The email is invalid</string>
    <string name="empty_name">Please insert your name</string>
    <string name="empty_password">Please insert your password</string>
    <string name="password_must_more8">Password must more than 8 character</string>
    <string name="data_not_loaded">Data not loaded</string>
    <string name="retry">Retry</string>
    <string name="confirm_logout">Are you sure want logout ?</string>
    <string name="cancel">Cancel</string>
    <string name="detail_story">Detail Story</string>
    <string name="camera">Camera</string>
    <string name="camera_x">Camera X</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="upload_story">Upload Story</string>
    <string name="story_description">Story Description</string>
    <string name="desc_cant_empty">Description can\'t empty</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="empty_text">NO DATA</string>
    <string name="change_language">Change Language</string>
    <string name="add_story">Add Story</string>
    <string name="maps">Maps</string>
    <string name="image_story">Image Story</string>
</resources>